// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - QuoteBubble BubbleButtons renders correctly if navigator share API is NOT availible 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding-bottom: 1rem;
  padding-right: 0.8rem;
}

<div
  className="c0"
>
  <DesktopShare
    variant="facebook"
  />
  <DesktopShare
    variant="twitter"
  />
  <CopyButton
    valueToCopy="Test Quote"
  />
</div>
`;

exports[`COMPONENT - QuoteBubble BubbleButtons renders correctly if navigator share API is availible 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding-bottom: 1rem;
  padding-right: 0.8rem;
}

<div
  className="c0"
>
  <MobileShare />
  <CopyButton
    valueToCopy="Test Quote"
  />
</div>
`;
